--- a/Estilo_menu.css
+++ b/Estilo_menu.css
@@ -1,5 +1,5 @@
 
-* {margin: 0; padding: 0;}
+ * {margin: 0; padding: 0;}
 
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -116,5 +116,38 @@ body{
         left: 0px;
         background-color: hsl(160, 51%, 29%);
         list-style: none;
+    }
+}
+
+/*Ajustando o conteúdo do Flex-Box*/
+
+article {
+    padding: 10px;
+    margin: 10px;
+    background: hwb(221 59% 9%);
+    flex: 150px;
+}
+
+article h1 {
+    font-weight: 600;
+}
+
+section {
+    display: flex;
+    flex-flow: row wrap;
+    font-size: 1.2em;
+}
+
+@media  screen and (min-width: 481px) and (max-width: 767px) {
+    article {
+        flex: 40%;
+        font-size: 1.1em;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    article {
+        flex: 20%;
+        font-size: 1em;
     }
 }
