--- a/Estilo_menu.css
+++ b/Estilo_menu.css
@@ -1,5 +1,5 @@
 
- * {margin: 0; padding: 0;}
+ * {margin: 0; padding: 10;}
 
 body{
     font-family: Arial, Helvetica, sans-serif;
@@ -106,7 +106,7 @@ body{
     #menu-principal li a:hover {
         cursor: pointer;
         font-weight: bold;
-        color: #520635;
+        color: hwb(281 42% 6%);
         transition: 0.3s;
         left: 10px;
     }
