--- a/Estilo_menu.css
+++ b/Estilo_menu.css
@@ -11,6 +11,8 @@ body{
     font-family: monospace;
     float: left;
     width: 100%;
+    display: block;
+    overflow: auto;
 }
 
 #menu-principal {
